distribution/istio-resources/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - dashboard.kubeflow.awx.im
    # - serving.kubeflow.awx.im
    # - "*.serving.kubeflow.awx.im"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - dashboard.kubeflow.awx.im
    # - serving.kubeflow.awx.im
    # - "*.serving.kubeflow.awx.im"
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-ingressgateway-certs
